# ThumbyCue

./: .gitignore  AI_PLAN.md  BACKLOG.md  CLAUDE.md  PLAN.md  README.md
device/: CMakeLists.txt  check_size.cmake  cue_device_main.c
game/: cue_ai.c  cue_ai.h  cue_audio.c  cue_audio.h  cue_game.c  cue_game.h  cue_physics.c  cue_physics.h  cue_render.c  cue_render.h  cue_rules.c  cue_rules.h  cue_table.c  cue_table.h  r3d_raster.c  r3d_raster.h
host/: CMakeLists.txt  host_main.c
tools/: README.md  aitest.c  gen_cue_faces.py  gen_cue_sounds.py  gen_screenshots.py  make_video.py  phystest.c  rulestest.c  sfxtest.c
